# PES_Gesture_control

./: README.md
Embedded_project/: CMakeLists.txt  nrf52dk_nrf52832.overlay  prj.conf  sample.yaml
Embedded_project/src/: bluetoothconnection.h  main.c  ssd_display.c  ssd_display.h
Embedded_project_ble/src/: main.c
Embedded_project_ble_mpu6050/: CMakeLists.txt  prj.conf
Embedded_project_ble_mpu6050/src/: bluetooth_file.h  classifier.h  main.c  window.h
Embedded_project_ble_mpu6050_ml/: CMakeLists.txt  prj.conf  prj_minimal.conf
Embedded_project_ble_mpu6050_ml/src/: button_config.h  classifier.h  main.c  window.h
MPU6050_Embedded_project/: CMakeLists.txt
MPU6050_Embedded_project/src/: classifier.h  main.c  window.h
OLED_Embedded_project/: CMakeLists.txt
OLED_Embedded_project/src/: bluetoothconnection.c  main.c  ssd_display.c  ssd_display.h
Shape_Classifier_Python_Script/: Classifier.h  Window.h  line.csv  plot_data_s2.py  sqr.csv  stationary.csv  tick.csv
